--- a/AnywhereFitnessUnit2Build/AnywhereFitnessUnit2Build/Storyboard/AnywhereFitnessUnit2Build/Storyboard/Base.lproj/Login.storyboard
+++ b/AnywhereFitnessUnit2Build/AnywhereFitnessUnit2Build/Storyboard/AnywhereFitnessUnit2Build/Storyboard/Base.lproj/Login.storyboard
@@ -37,7 +37,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="39" translatesAutoresizingMaskIntoConstraints="NO" id="Zd7-sY-MlZ">
-                                <rect key="frame" x="50" y="464.5" width="314" height="317"/>
+                                <rect key="frame" x="50" y="470" width="314" height="317"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zPM-6A-9b9">
                                         <rect key="frame" x="0.0" y="0.0" width="314" height="50"/>
@@ -75,21 +75,33 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="9JD-c6-l4c">
-                                <rect key="frame" x="40" y="144" width="334" height="290.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="9JD-c6-l4c">
+                                <rect key="frame" x="40" y="110" width="334" height="330"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LYH-dA-Jfz">
-                                        <rect key="frame" x="47" y="0.0" width="240" height="240"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BlackLogoTriangleOnly" translatesAutoresizingMaskIntoConstraints="NO" id="LYH-dA-Jfz">
+                                        <rect key="frame" x="17" y="0.0" width="300" height="300"/>
                                         <constraints>
+                                            <constraint firstAttribute="height" constant="300" id="0bu-9C-aq3"/>
                                             <constraint firstAttribute="width" secondItem="LYH-dA-Jfz" secondAttribute="height" multiplier="1:1" id="0ev-9i-8nj"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Ut-tC-kZ7">
-                                        <rect key="frame" x="146" y="270" width="42" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="Xt2-9N-NrY">
+                                        <rect key="frame" x="46.5" y="300" width="241" height="30"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ANYWHERE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Ut-tC-kZ7">
+                                                <rect key="frame" x="0.0" y="0.0" width="142" height="30"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FITNESS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dSc-zA-ett">
+                                                <rect key="frame" x="144" y="0.0" width="97" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                             </stackView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="8n9-Wi-Bjl">
@@ -99,8 +111,8 @@
                                     <segment title="Trainer"/>
                                 </segments>
                             </segmentedControl>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="NWk-Oc-A9p">
-                                <rect key="frame" x="69" y="821.5" width="276.5" height="30"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="JG4-C9-bC4">
+                                <rect key="frame" x="70" y="817" width="274.5" height="30"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If you need to register, please click" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qpC-30-dPx">
                                         <rect key="frame" x="0.0" y="0.0" width="237.5" height="30"/>
@@ -109,7 +121,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kKt-Sh-sdf">
-                                        <rect key="frame" x="241.5" y="0.0" width="35" height="30"/>
+                                        <rect key="frame" x="239.5" y="0.0" width="35" height="30"/>
                                         <state key="normal" title="here."/>
                                         <connections>
                                             <action selector="registerButtonTapped:" destination="rp2-pu-RLx" eventType="touchUpInside" id="R9t-KB-hPH"/>
@@ -120,17 +132,17 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="NWk-Oc-A9p" firstAttribute="top" secondItem="Zd7-sY-MlZ" secondAttribute="bottom" constant="40" id="62x-yb-Jvo"/>
-                            <constraint firstItem="9JD-c6-l4c" firstAttribute="top" secondItem="GZ5-I6-O43" secondAttribute="top" constant="100" id="7Rh-My-tYq"/>
                             <constraint firstItem="GZ5-I6-O43" firstAttribute="trailing" secondItem="8n9-Wi-Bjl" secondAttribute="trailing" constant="40" id="A7n-S3-sUe"/>
                             <constraint firstItem="Zd7-sY-MlZ" firstAttribute="top" secondItem="9JD-c6-l4c" secondAttribute="bottom" constant="30" id="EmY-8B-5g1"/>
                             <constraint firstItem="GZ5-I6-O43" firstAttribute="trailing" secondItem="9JD-c6-l4c" secondAttribute="trailing" constant="40" id="FZd-YA-zIQ"/>
                             <constraint firstItem="8n9-Wi-Bjl" firstAttribute="top" secondItem="GZ5-I6-O43" secondAttribute="top" constant="20" id="Mpc-6H-LP5"/>
-                            <constraint firstItem="NWk-Oc-A9p" firstAttribute="centerX" secondItem="vbD-QM-ikl" secondAttribute="centerX" id="SHe-Pd-zpg"/>
                             <constraint firstItem="8n9-Wi-Bjl" firstAttribute="leading" secondItem="GZ5-I6-O43" secondAttribute="leading" constant="40" id="g5f-J9-GLO"/>
                             <constraint firstItem="GZ5-I6-O43" firstAttribute="trailing" secondItem="Zd7-sY-MlZ" secondAttribute="trailing" constant="50" id="kGx-rC-eGL"/>
+                            <constraint firstItem="JG4-C9-bC4" firstAttribute="centerX" secondItem="vbD-QM-ikl" secondAttribute="centerX" id="kYy-sK-fGw"/>
                             <constraint firstItem="Zd7-sY-MlZ" firstAttribute="leading" secondItem="GZ5-I6-O43" secondAttribute="leading" constant="50" id="l9Z-mU-KTQ"/>
                             <constraint firstItem="9JD-c6-l4c" firstAttribute="leading" secondItem="GZ5-I6-O43" secondAttribute="leading" constant="40" id="lkv-i8-e0S"/>
+                            <constraint firstItem="JG4-C9-bC4" firstAttribute="top" secondItem="Zd7-sY-MlZ" secondAttribute="bottom" constant="30" id="m4X-Cb-Csx"/>
+                            <constraint firstItem="9JD-c6-l4c" firstAttribute="top" secondItem="8n9-Wi-Bjl" secondAttribute="bottom" constant="15" id="pmH-DT-6Rk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="GZ5-I6-O43"/>
                     </view>
@@ -149,4 +161,7 @@
             <point key="canvasLocation" x="-287" y="-654"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="BlackLogoTriangleOnly" width="1500" height="1500"/>
+    </resources>
 </document>
