--- a/AnywhereFitnessUnit2Build/AnywhereFitnessUnit2Build/Storyboard/Base.lproj/Main.storyboard
+++ b/AnywhereFitnessUnit2Build/AnywhereFitnessUnit2Build/Storyboard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yIh-Pr-Xf4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -70,20 +70,11 @@
                         <outlet property="searchForAClassButton" destination="Bec-oU-XiE" id="pjH-A6-dyb"/>
                         <outlet property="tableView" destination="N4v-2u-N4w" id="NM9-Fu-qlR"/>
                         <outlet property="welcomeLabel" destination="trx-GS-Yx5" id="4DO-AH-38d"/>
-                        <segue destination="1em-Rd-9zX" kind="presentation" identifier="ClientLoginModalSegue" id="ImP-lL-27A"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qej-XR-cRb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-423.1884057971015" y="632.8125"/>
-        </scene>
-        <!--Login-->
-        <scene sceneID="nlv-v5-Mjd">
-            <objects>
-                <viewControllerPlaceholder storyboardIdentifier="Login" storyboardName="Login" id="1em-Rd-9zX" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Rno-W8-zbb" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="93" y="281"/>
         </scene>
         <!--ClientSearch-->
         <scene sceneID="Feu-Sg-Hzk">
@@ -91,7 +82,7 @@
                 <viewControllerPlaceholder storyboardName="ClientSearch" id="bcL-ni-YbY" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wau-g8-KOK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="155" y="667"/>
+            <point key="canvasLocation" x="135" y="648"/>
         </scene>
         <!--ClientClassDetail-->
         <scene sceneID="QyA-b8-V8d">
@@ -99,15 +90,7 @@
                 <viewControllerPlaceholder storyboardName="ClientClassDetail" id="RPf-03-si3" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4bH-a6-1Gs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="458" y="597"/>
-        </scene>
-        <!--TrainerClassDetail-->
-        <scene sceneID="wsE-lh-WAC">
-            <objects>
-                <viewControllerPlaceholder storyboardName="TrainerClassDetail" id="g2C-rh-aIw" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xP7-P8-YAg" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="180" y="1114"/>
+            <point key="canvasLocation" x="154" y="615"/>
         </scene>
     </scenes>
 </document>
