--- a/AnywhereFitnessUnit2Build/AnywhereFitnessUnit2Build/Storyboard/AnywhereFitnessUnit2Build/Storyboard/Base.lproj/Login.storyboard
+++ b/AnywhereFitnessUnit2Build/AnywhereFitnessUnit2Build/Storyboard/AnywhereFitnessUnit2Build/Storyboard/Base.lproj/Login.storyboard
@@ -74,7 +74,7 @@
                                 <rect key="frame" x="40" y="150" width="334" height="255"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GreenLogoTriangleOnly copy" translatesAutoresizingMaskIntoConstraints="NO" id="LYH-dA-Jfz">
-                                        <rect key="frame" x="67" y="0.0" width="200.00000000000045" height="200.00000000000045"/>
+                                        <rect key="frame" x="67" y="0.0" width="200" height="200"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="200" id="0bu-9C-aq3"/>
                                             <constraint firstAttribute="width" secondItem="LYH-dA-Jfz" secondAttribute="height" multiplier="1:1" id="0ev-9i-8nj"/>
